tests/baselines/reference/iteratorSpreadInCall2.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall2.ts(15,5): error TS2556: Expected 1 arguments, but got 0 or more.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall2.ts (1 errors) ====
    function foo(s: symbol[]) { }
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    foo(...new SymbolIterator);
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2556: Expected 1 arguments, but got 0 or more.
!!! related TS6210 tests/cases/conformance/es6/spread/iteratorSpreadInCall2.ts:1:14: An argument for 's' was not provided.